--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -92,6 +92,77 @@
         <ul id="bookedSlotsList" class="list-group mb-4"></ul>
       </div>
 
+      <!-- edit slot bootstrap modal window -->
+      <div
+        class="modal fade"
+        id="editSlotModal"
+        tabindex="-1"
+        aria-labelledby="editSlotLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <form id="editSlotForm" class="needs-validation" novalidate>
+              <div class="modal-header">
+                <h5 class="modal-title" id="editSlotLabel">Edit Time Slot</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <input type="hidden" id="editSlotId" />
+
+                <div class="mb-3">
+                  <label for="editStartTime" class="form-label">Start Time</label>
+                  <input
+                    type="datetime-local"
+                    id="editStartTime"
+                    class="form-control"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="editEndTime" class="form-label">End Time</label>
+                  <input
+                    type="datetime-local"
+                    id="editEndTime"
+                    class="form-control"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="editMaxParticipants" class="form-label"
+                    >Max Participants</label
+                  >
+                  <input
+                    type="number"
+                    id="editMaxParticipants"
+                    class="form-control"
+                    min="1"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cancel
+                </button>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+
       <div class="text-end mt-4">
         <a href="/logout" class="btn btn-link">Log Out</a>
       </div>
